tests/custom/STARIS_2022/operation-type-errors/range-type-error/stderr.expected
Error:
    range-type-error.essence:2:21:
  |
2 | such that s = range(5)
  |                     ^
Type error:
	Expected: "Function or Sequence"
	Got: int

